--- a/style.css
+++ b/style.css
@@ -3,3 +3,48 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header{
+  text-align: center;
+}
+
+img{
+  display: block;
+  margin: 0 auto;
+}
+
+nav a{
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: gray;
+}
+
+figcaption{
+  font-size: 15px;
+  text-align: center;
+}
+
+#featured-property p {
+  text-align: center;
+  width: 800px;
+  margin: 10px 0;
+  padding-left: 27%;
+  padding-right: 27%;
+}
+
+#details {
+  background: rgb(253, 60, 2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#details div {
+  flex: 1;
+  margin: 10px;
+  text-align: center;
+  float: left;
+  width: 25%;
+}
